methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:3: error: not found: value nbPAs
  if(versLAvant){for(x<-1 to nbPAs){avance()}}
                             ^