methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean) {
  if(versLAvant){for(x<-1 to nbPAs){avance()}}
  else{for(x<-1 to nbPas){recule()}}
}